--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container">
           <div class="row justify-content-md-center">
             <div class="col-sm-12 col-md-8">
-              <h1><img class="icon" src="img/icon.png" width="60" height="60">Welcome in To-do List Application</h1>
+              <h1>Welcome in To-do List Application</h1>
               <div class="todo-inner">
                 <div class="form-row">
                   <div class="col-8 mr-sm-2">
